<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arbitre, c\'est un métier !</string>
    <string name="btnCaucus">Caucus</string>
    <string name="btnImprov">Au jeu</string>
    <string name="btnPause">Pause</string>
    <string name="btnReset">R.a.z.</string>
    <string name="btnPrevImprov">&lt;&lt;</string>
    <string name="btnNextImprov">&gt;&gt;</string>
    <string name="titleCategory">Catégorie</string>
    <string name="titleDuration">Durée</string>
    <string name="titlePlayerCount">Joueurs</string>
    <string name="titleTitle">Thème</string>
    <string name="titleType">Type</string>
    <string name="typeCompared">Comparée</string>
    <string name="typeMixt">Mixte</string>
    <string name="unlimited">Ill.</string>
    <string name="categoryFree">Libre</string>
    <!--  FIXME (why is a quote refused ?) -->
    <string name="list_no_improvs">Aucune</string>
    <!-- Edition -->
    <string name="improv_edit_type">Type</string>
    <string name="improv_edit_title">Titre</string>
    <string name="improv_edit_category">Catégorie</string>
    <string name="improv_edit_duration">Durée (en secondes)</string>
    <string name="improv_edit_player_count">Joueurs</string>
    
    <string name="improv_edit_save">Sauver</string>
    <string name="improv_edit_delete">Supprimer</string>
    
    <string name="improv_edit_confirm_delete_title">Confirmer</string>
    <string name="improv_edit_confirm_delete_message">Voulez vous vraiment supprimer cette impro ?</string>
    
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    
    <string name="improv_edit_error_no_title">Il manque un titre à cette impro !</string>
    <string name="improv_edit_error_negative_player_count">Ne soyez pas timide, il faut au moins un joueur sur scène !</string>
    <string name="improv_edit_error_negative_duration">Scott Bakula n\'est pas dispo. Il faudra une durée positive (en secondes) à cette impro&#8230;</string>
    
    <string name="improv_list_no_improv">Il n\'y a pas d\'impro définie pour le moment. Ouvrez le menu, et cliquez sur \'Ajouter\'</string>
    <string name="improv_list_add">Ajouter</string>
    <string name="improv_list_add_long">Ajouter une impro</string>
    
    <string name="improv_list_play">Jouer</string>
    <string name="improv_list_play_long">Jouer le match</string>
    
</resources>
